// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual modes API navigation should compute both snapshot & timespan results 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-conditional-attr",
  "aria-deprecated-role",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-prohibited-attr",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bf-cache",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "clickjacking-mitigation",
  "cls-culprits-insight",
  "color-contrast",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-latency-insight",
  "document-title",
  "dom-size",
  "dom-size-insight",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "empty-heading",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-display-insight",
  "font-size",
  "forced-reflow-insight",
  "form-field-multiple-labels",
  "frame-title",
  "geolocation-on-start",
  "has-hsts",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "http-status-code",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-delivery-insight",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "inspector-issues",
  "interaction-to-next-paint-insight",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-lazy-loaded",
  "lcp-phases-insight",
  "legacy-javascript",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-critical-network-tree-insight",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "origin-isolation",
  "paste-preventing-inputs",
  "prioritize-lcp-image",
  "redirects",
  "redirects-http",
  "render-blocking-insight",
  "render-blocking-resources",
  "resource-summary",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "select-name",
  "server-response-time",
  "skip-link",
  "slow-css-selector-insight",
  "speed-index",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "third-parties-insight",
  "third-party-cookies",
  "third-party-facades",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "viewport-insight",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API navigation should compute results with callback requestor 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-conditional-attr",
  "aria-deprecated-role",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-prohibited-attr",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bf-cache",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "clickjacking-mitigation",
  "cls-culprits-insight",
  "color-contrast",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-latency-insight",
  "document-title",
  "dom-size",
  "dom-size-insight",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "empty-heading",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-display-insight",
  "font-size",
  "forced-reflow-insight",
  "form-field-multiple-labels",
  "frame-title",
  "geolocation-on-start",
  "has-hsts",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "http-status-code",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-delivery-insight",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "inspector-issues",
  "interaction-to-next-paint-insight",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-lazy-loaded",
  "lcp-phases-insight",
  "legacy-javascript",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-critical-network-tree-insight",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "origin-isolation",
  "paste-preventing-inputs",
  "prioritize-lcp-image",
  "redirects",
  "redirects-http",
  "render-blocking-insight",
  "render-blocking-resources",
  "resource-summary",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "select-name",
  "server-response-time",
  "skip-link",
  "slow-css-selector-insight",
  "speed-index",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "third-parties-insight",
  "third-party-cookies",
  "third-party-facades",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "viewport-insight",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API snapshot should compute accessibility results on the page as-is 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-allowed-role",
  "aria-command-name",
  "aria-conditional-attr",
  "aria-deprecated-role",
  "aria-dialog-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-prohibited-attr",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-text",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "button-name",
  "bypass",
  "color-contrast",
  "crawlable-anchors",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-aria",
  "empty-heading",
  "focus-traps",
  "focusable-controls",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "html-xml-lang-mismatch",
  "identical-links-same-purpose",
  "image-alt",
  "image-aspect-ratio",
  "image-redundant-alt",
  "image-size-responsive",
  "input-button-name",
  "input-image-alt",
  "interactive-element-affordance",
  "js-libraries",
  "label",
  "label-content-name-mismatch",
  "landmark-one-main",
  "link-in-text-block",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "managed-focus",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "object-alt",
  "offscreen-content-hidden",
  "paste-preventing-inputs",
  "robots-txt",
  "select-name",
  "skip-link",
  "structured-data",
  "tabindex",
  "table-duplicate-name",
  "table-fake-caption",
  "target-size",
  "td-has-header",
  "td-headers-attr",
  "th-has-data-cells",
  "unsized-images",
  "use-landmarks",
  "uses-responsive-images-snapshot",
  "valid-lang",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Individual modes API startTimespan should compute ConsoleMessage results across a span of time 1`] = `
Array [
  "bf-cache",
  "bootup-time",
  "cls-culprits-insight",
  "cumulative-layout-shift",
  "deprecations",
  "document-latency-insight",
  "dom-size-insight",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "font-display-insight",
  "forced-reflow-insight",
  "image-aspect-ratio",
  "image-delivery-insight",
  "image-size-responsive",
  "inspector-issues",
  "interaction-to-next-paint",
  "interaction-to-next-paint-insight",
  "is-on-https",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-phases-insight",
  "legacy-javascript",
  "long-critical-network-tree-insight",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "non-composited-animations",
  "render-blocking-insight",
  "resource-summary",
  "screenshot-thumbnails",
  "script-treemap-data",
  "slow-css-selector-insight",
  "third-parties-insight",
  "third-party-cookies",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "viewport-insight",
  "work-during-interaction",
]
`;

exports[`Individual modes API startTimespan should compute ConsoleMessage results across a span of time 2`] = `
Array [
  "cls-culprits-insight",
  "document-latency-insight",
  "dom-size-insight",
  "font-display-insight",
  "forced-reflow-insight",
  "image-delivery-insight",
  "interaction-to-next-paint-insight",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-phases-insight",
  "long-critical-network-tree-insight",
  "non-composited-animations",
  "render-blocking-insight",
  "slow-css-selector-insight",
  "third-parties-insight",
  "third-party-summary",
  "user-timings",
]
`;

exports[`Individual modes API startTimespan should compute results from timespan after page load 1`] = `
Array [
  "bf-cache",
  "bootup-time",
  "cls-culprits-insight",
  "cumulative-layout-shift",
  "deprecations",
  "document-latency-insight",
  "dom-size-insight",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "font-display-insight",
  "forced-reflow-insight",
  "image-aspect-ratio",
  "image-delivery-insight",
  "image-size-responsive",
  "inspector-issues",
  "interaction-to-next-paint",
  "interaction-to-next-paint-insight",
  "is-on-https",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-phases-insight",
  "legacy-javascript",
  "long-critical-network-tree-insight",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "non-composited-animations",
  "render-blocking-insight",
  "resource-summary",
  "screenshot-thumbnails",
  "script-treemap-data",
  "slow-css-selector-insight",
  "third-parties-insight",
  "third-party-cookies",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "viewport-insight",
  "work-during-interaction",
]
`;

exports[`Individual modes API startTimespan should compute results from timespan after page load 2`] = `
Array [
  "bootup-time",
  "cls-culprits-insight",
  "document-latency-insight",
  "duplicated-javascript",
  "efficient-animated-content",
  "font-display-insight",
  "forced-reflow-insight",
  "image-delivery-insight",
  "interaction-to-next-paint-insight",
  "layout-shifts",
  "lcp-discovery-insight",
  "lcp-phases-insight",
  "legacy-javascript",
  "long-critical-network-tree-insight",
  "modern-image-formats",
  "network-rtt",
  "network-server-latency",
  "non-composited-animations",
  "render-blocking-insight",
  "slow-css-selector-insight",
  "third-parties-insight",
  "third-party-summary",
  "unminified-css",
  "unminified-javascript",
  "unused-javascript",
  "user-timings",
  "uses-optimized-images",
  "uses-responsive-images",
  "uses-text-compression",
]
`;
